WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241641
Transformed element with overflow:hidden fails to clip positioned descendants
https://bugs.webkit.org/show_bug.cgi?id=241641
Summary
Transformed element with overflow:hidden fails to clip positioned descendants
Simon Fraser (smfr)
Reported
2022-06-15 12:03:02 PDT
Created
attachment 460257
[details]
Testcase See testcase; transform creates containing block for positioned descendants, but we fail to account for that when clipping.
Attachments
Testcase
(690 bytes, text/html)
2022-06-15 12:03 PDT
,
Simon Fraser (smfr)
no flags
Details
WIP patch
(894 bytes, patch)
2022-07-06 21:58 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
test case 2
(947 bytes, text/html)
2022-07-07 14:38 PDT
,
Fujii Hironori
no flags
Details
WIP patch
(2.22 KB, patch)
2022-07-07 18:10 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(5.40 KB, patch)
2022-07-10 22:49 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-06-22 12:03:17 PDT
<
rdar://problem/95711859
>
Fujii Hironori
Comment 2
2022-07-06 21:58:13 PDT
Created
attachment 460729
[details]
WIP patch
Simon Fraser (smfr)
Comment 3
2022-07-06 22:05:30 PDT
Comment on
attachment 460729
[details]
WIP patch This code should use canContainFixedPositionObjects()/canContainAbsolutelyPositionedObjects() so that it has the right behavior for will-change, filters etc.
Fujii Hironori
Comment 4
2022-07-07 14:38:16 PDT
Created
attachment 460746
[details]
test case 2 Thank you for the advise.
Fujii Hironori
Comment 5
2022-07-07 18:10:15 PDT
Created
attachment 460753
[details]
WIP patch
Fujii Hironori
Comment 6
2022-07-10 22:49:34 PDT
Created
attachment 460788
[details]
Patch
Fujii Hironori
Comment 7
2022-07-12 13:03:04 PDT
***
Bug 229999
has been marked as a duplicate of this bug. ***
EWS
Comment 8
2022-07-12 13:25:47 PDT
Committed
252387@main
(c35d5dd9cfd7): <
https://commits.webkit.org/252387@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460788
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug