Transformed element with overflow:hidden fails to clip absolutely positioned descendants https://bugs.webkit.org/show_bug.cgi?id=241641

Reviewed by Simon Fraser.

If an element is a containing block and applied with overflow:hidden,
its absolutely positioned descendants should be clipped by the border
box. However, some properties, for example, transform, perspective,
will-change:transform, contain:paint and contain:layout didn't work as
expected.

* LayoutTests/fast/overflow/containing-block-and-overflow-hidden-expected.html: Added.
* LayoutTests/fast/overflow/containing-block-and-overflow-hidden.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):

Canonical link: https://commits.webkit.org/252387@main